[package]
name = "noters"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.3"
toml = "0.8.19"
